# investalens

./: .env.example  .gitignore  .prettierignore  AGENTS.md  AUTHENTICATION_PATTERNS.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  USER-MANUAL.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  prettier.config.js  prisma.config.ts  pyproject.toml  skills-lock.json  tsconfig.json  vercel.json  vitest.config.ts
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.zed/: settings.json
app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
docs/: ACCOUNT.md  ACCOUNTS.md  ACTIONS.md  ADVANCED.md  API.md  ARCHITECTURE.md  ASSETS.md  DATA_IMPORT.md  GAPS.md  GETTING-STARTED.md  KNOWLEDGE.md  SHARESIGHT_API.md  TAX.md  TOOLS.md
e2e/: README.md  a11y.spec.ts  accounts.spec.ts  api-security.spec.ts  auth.spec.ts  cgt.spec.ts  delisted.spec.ts  global-setup.ts  helpers.ts  import.spec.ts  labels-groups.spec.ts  portfolio.spec.ts  sharing.spec.ts
lib/: auth.ts  db.ts  utils.ts
plan/: R0-P0.md  R0-P1.md  R0-P2.md  R1-P1a.md  R1-P1b.md  R1-P1c.md  R1-P1d.md  R1-P2.md  R1-overview.md  R2-P0.md  R2-P1a.md  R2-P1b.md  R2-P1c.md  R2-P1d.md  R2-P1e.md  R2-P2.md  R2-overview.md  R3-P1a.md  R3-P1b.md  R3-P2.md  R3-overview.md  R4-P1.md  R4-P2.md  R4-overview.md  README.md  accounts-redesign.md  analytics-implementation.md  cgt-compliance.md  charts-overhaul.md  models-P1a.md  models-P1b.md  models-P1c.md  models-P1d.md  models-P1e.md  models-P1f.md  models-P2.md  (+3 more)
(+958 files in other folders)
