[project]
name = "investalens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.2",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
    "skfolio>=0.20.1",
    "statsmodels>=0.14.6",
    "yfinance>=1.4.1",
]
